Returning answers to queries

--- a/XENO_EDA/QUESTIONS.ipynb
+++ b/XENO_EDA/QUESTIONS.ipynb
@@ -1647,12 +1647,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "b1258971",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def semantic_search(query, dictionary, tfidf_model, dense_corpus, questions, top_n=5):\n",
+    "def semantic_search(query, dictionary, tfidf_model, dense_corpus, questions, contents, top_n=5):\n",
     "    # Preprocess query\n",
     "    tokens = preprocess_query(query)\n",
     "\n",
@@ -1671,13 +1671,13 @@
     "    # Get top matches\n",
     "    top_indices = similarities.argsort()[-top_n:][::-1]\n",
     "\n",
-    "    results = [(questions[i], similarities[i]) for i in top_indices]\n",
+    "    results = [(questions[i], contents[i], similarities[i]) for i in top_indices]\n",
     "    return results\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "24e61dca",
    "metadata": {},
    "outputs": [
@@ -1685,25 +1685,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2649 - How is the interest for xeno calculated and what's the duration of the Increment?\n",
-      "0.0756 - Can I withdraw using my XENO App?\n",
-      "0.0720 - Can I withdraw using my XENO web dashboard?\n",
-      "0.0514 - How can I set up my XENO Autosave using my web dashboard?\n"
+      "0.0489 - Q: Can I withdraw using my XENO App?\n",
+      "     A: 1. Yes you can!\n",
+      "2. Login into the App.\n",
+      "3. Select the Account from which you would like to withdraw.\n",
+      "4. Select the Goal from which you would like to withdraw.\n",
+      "5. Click on the three dots in the right upper corner.\n",
+      "6. Click on Withdraw Money (Option 2)\n",
+      "7. Follow the prompts, submit the form\n",
+      "\n",
+      "0.0465 - Q: Can I withdraw using my XENO web dashboard?\n",
+      "     A: 1. Yes you can!\n",
+      "2. Log in to your XENO account at https://myxeno.com/login.\n",
+      "3. Once you're logged in and on your Homepage, you will see your Account(s). Select the specific Account from which you want to withdraw.\n",
+      "4. Within that Account, you will find your personal goal(s). Choose the goal from which you wish to make a withdrawal.\n",
+      "5. Scroll down to the ACTIONS section located at the bottom of the page. Click on WITHDRAW and follow the prompts to complete your withdrawal request\n",
+      "\n",
+      "0.0332 - Q: How can I set up my XENO Autosave using my web dashboard?\n",
+      "     A: 1. Please login to your account using Login - XENO (myxeno.com)\n",
+      "2. Navigate to the top right corner of your home page\n",
+      "3. Select ‘Setup AutoSave’\n",
+      "\n",
+      "0.0297 - Q: Can I edit my phone number using my XENO App?\n",
+      "     A: 1. Yes you can!  Please follow the below steps to update your phone number on your XENO App\n",
+      "2. Step 1: Log in to the XENO App\n",
+      "3. Step 2: Tap “More” at the bottom right of your screen.\n",
+      "4. Step 3: Select “Settings” from the menu\n",
+      "5. Step 4: Tap your profile name to proceed.\n",
+      "6. Step 5: Choose the “Security” option.\n",
+      "7. Step 6: Tap the “Edit” button at the top right.\n",
+      "8. Step 7: Select the reason for updating your phone number.\n",
+      "9. Step 8: Enter the security code sent to your current phone number.\n",
+      "10. Step 9: Enter a new phone number\n",
+      "11. Step 10: Review and confirm your new details.\n",
+      "12. Step 11: Enter a security code sent to your new phone number\n",
+      "13. Step 12: Your phone number has been successfully updated!\n",
+      "14. Please do not hesitate to reach out for any other inquiries.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "results = semantic_search(\n",
-    "    query=\"How do I use my phone number with XENO?\",\n",
+    "    query=\"How to create a XENO account\",\n",
     "    dictionary=dictionary,\n",
     "    tfidf_model=tfidf_model,\n",
     "    dense_corpus=dense_corpus_questions,\n",
     "    questions=xeno['question'].tolist(),  # list of original questions\n",
+    "    contents=xeno['content'].tolist(),\n",
     "    top_n=4\n",
     ")\n",
     "\n",
-    "for question, score in results:\n",
-    "    print(f\"{score:.4f} - {question}\")\n"
+    "for question, answer, score in results:\n",
+    "    print(f\"{score:.4f} - Q: {question}\\n     A: {answer}\\n\")\n"
    ]
   },
   {
