Comparing the similarity score using word to vector and sentence transformers

--- a/XENO_EDA/QUESTIONS2.ipynb
+++ b/XENO_EDA/QUESTIONS2.ipynb
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "id": "e20e3b79",
    "metadata": {},
    "outputs": [],
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "9ce5c466",
    "metadata": {},
    "outputs": [],
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "id": "1c918527",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "id": "0209689e",
    "metadata": {},
    "outputs": [],
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "id": "ed3f240c",
    "metadata": {},
    "outputs": [],
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "id": "8806fca3",
    "metadata": {},
    "outputs": [],
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "f75be675",
    "metadata": {},
    "outputs": [],
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "609996d0",
    "metadata": {},
    "outputs": [],
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "d030374e",
    "metadata": {},
    "outputs": [],
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "a7fa41fd",
    "metadata": {},
    "outputs": [],
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "8eab086b",
    "metadata": {},
    "outputs": [
@@ -1292,19 +1292,15 @@
      "output_type": "stream",
      "text": [
       "                                            question  \\\n",
-      "0              How to I begin my investment journey?   \n",
-      "1                       How to remove withdraw lock    \n",
-      "2  How is the interest for xeno calculated and wh...   \n",
+      "0  How is the interest for xeno calculated and wh...   \n",
       "\n",
       "                                             content  similarity  \n",
-      "0  1. At XENO, we offer both investment advisory ...    0.368145  \n",
-      "1  1. Please send us an email at uganda@myxeno.co...    0.321316  \n",
-      "2  1. We specialize in creating customized portfo...    0.126955  \n"
+      "0  1. We specialize in creating customized portfo...    0.227389  \n"
      ]
     }
    ],
    "source": [
-    "results = semantic_search(\"I want to use MoMo and autosave\", w2v_model, xeno)\n",
+    "results = semantic_search(\"XENO and autosave accounts\", w2v_model, xeno)\n",
     "print(results)\n"
    ]
   },
@@ -1318,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "a92c8d7e",
    "metadata": {},
    "outputs": [],
@@ -1329,23 +1325,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "49359bc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SentenceTransformer('all-MiniLM-L6-v2')  # Lightweight, fast, good performance\n"
+    "model = SentenceTransformer('multi-qa-MiniLM-L6-cos-v1')  #\n",
+    "#'all-MiniLM-L6-v2  Lightweight, fast, good performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "c0d6b6eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your list of questions\n",
-    "questions = xeno['no_stops_on_questions'].tolist()\n",
+    "questions = xeno['question'].tolist()\n",
     "\n",
     "# Encode all at once into a tensor matrix\n",
     "question_embeddings = model.encode(questions, convert_to_tensor=True)\n"
@@ -1353,12 +1350,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "id": "a6522748",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"Can I change my phone number if I have XENO?\"\n",
+    "query = \"XENO and autosave accounts\"\n",
     "query_embedding = model.encode(query, convert_to_tensor=True)\n",
     "\n",
     "# Compute cosine similarities\n",
@@ -1367,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "id": "d8f05994",
    "metadata": {},
    "outputs": [
@@ -1377,19 +1374,19 @@
      "text": [
       "                                                 question  \\\n",
       "id                                                          \n",
-      "AD0002  How can I set up my XENO Autosave using my MoM...   \n",
       "AD0003  How can I set up my XENO Autosave using my web...   \n",
-      "AD0011      Can I edit my phone number using my XENO App?   \n",
-      "AD0010  Can I edit my phone number using my XENO web d...   \n",
+      "AD0002  How can I set up my XENO Autosave using my MoM...   \n",
       "AD0005  How is the interest for xeno calculated and wh...   \n",
+      "AD0008                  Can I withdraw using my XENO App?   \n",
+      "AD0007        Can I withdraw using my XENO web dashboard?   \n",
       "\n",
       "                                                  content  similarity  \n",
       "id                                                                     \n",
-      "AD0002  1. Please see how to automate your savings her...    0.453520  \n",
-      "AD0003  1. Please login to your account using Login - ...    0.453520  \n",
-      "AD0011  1. Yes you can!  Please follow the below steps...    0.333821  \n",
-      "AD0010  1. Yes you can! Please follow the below steps ...    0.333821  \n",
-      "AD0005  1. We specialize in creating customized portfo...    0.317408  \n"
+      "AD0003  1. Please login to your account using Login - ...    0.449327  \n",
+      "AD0002  1. Please see how to automate your savings her...    0.449327  \n",
+      "AD0005  1. We specialize in creating customized portfo...    0.431654  \n",
+      "AD0008  1. Yes you can!\\n2. Login into the App.\\n3. Se...    0.197627  \n",
+      "AD0007  1. Yes you can!\\n2. Log in to your XENO accoun...    0.197627  \n"
      ]
     }
    ],
